<resources>
    <string name="app_name">FitTrack</string>

    <!-- Common Action Strings -->
    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>

    <!-- Login Activity -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account? Register here</string>
    <string name="login_success">Login successful</string>
    <string name="login_error">Invalid Username or Password</string>
    <string name="login_fields_empty">Please enter username and password</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="logout">Confirm Logout</string>
    <string name="unable_to_access_data">Unable to access application data: </string>

    <!-- Registration Activity -->
    <string name="registration">User Registration</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="age">Age</string>
    <string name="activity_level">Activity Level</string>

    <!-- Home Activity -->
    <string name="home">Home</string>
    <string name="calorie_intake">Calorie Intake</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="change_goal">Change Goal</string>
    <string name="calories_eaten">Calories Eaten</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="exercise">Exercise</string>
    <string name="change_calorie_goal">Change Calorie Goal</string>
    <string name="enter_new_goal">Enter new calorie goal</string>
    <string name="goal_updated">Calorie goal updated!</string>
    <string name="enter_value">Please enter a value</string>
    <string name="enter_valid_number">Please enter a valid number</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="confirm_delete_profile">Are you sure you want to delete your profile? This action cannot be undone.</string>
    <string name="profile_deleted">Profile deleted successfully</string>
    <string name="delete_error">Error deleting profile</string>
    <string name="yes">Yes</string>
    <string name="user_id">USER_ID</string>
    <string name="user_name">User Name</string>
    <string name="user_height">Height</string>
    <string name="user_weight">Weight</string>
    <string name="user_goal_weight">Goal Weight</string>
    <string name="user_age">Age</string>
    <string name="user_activity_level">Activity Level</string>
    <string name="meal_type">MEAL_TYPE</string>
    <string name="apply">Apply</string>




    <!-- Food Activities -->
    <string name="add_food">Add Food</string>
    <string name="search_food">Search Food</string>
    <string name="food_name">Food Name</string>
    <string name="food_calories">Calories</string>
    <string name="food_added">%1$s has been added successfully</string>
    <string name="food_add_failed">Failed to add food item</string>
    <string name="invalid_calories">Please enter a valid number for calories</string>
    <string name="food_log_added">%1$s added to your log</string>
    <string name="select_food">Select %1$s Food</string>

    <!-- Exercise Activities -->
    <string name="add_exercise">Add Exercise</string>
    <string name="search_exercise">Search Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_calories">Calories Burned</string>
    <string name="exercise_added">Exercise added successfully</string>
    <string name="exercise_updated">Exercise updated!</string>
    <string name="invalid_exercise_calories">Invalid calories format</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="confirm_delete_exercise">Delete \"%1$s\" and all related logs?</string>
    <string name="exercise_deleted">Deleted: %1$s</string>
    <string name="exercise_delete_error">Error deleting exercise: %1$s</string>
    <string name="default_exercise_edit">Unfortunately! you cannot edit default exercise</string>
    <string name="default_exercise_delete">Unfortunately! you cannot delete default exercise</string>
    <string name="calories_burned_added">Calories burned added: %1$d</string>
    <string name="exercise_burns">Burns %1$d calories (30 mins)</string>
    <string name="confirm_delete">Confirm Deletion</string>


    <!-- Error Messages -->
    <string name="error_no_user_id">Error: No user ID provided</string>
    <string name="error_initializing">Error initializing: %1$s</string>
    <string name="error_loading_food">Error loading food list: %1$s</string>
    <string name="error_adding_food">Error adding food: %1$s</string>
    <string name="error_general">Error: %1$s</string>
    <string name="error_database">Database error: %1$s</string>
    <string name="error_unexpected">Unexpected error: %1$s</string>

    <!-- Dialog Titles -->
    <string name="dialog_confirm_deletion">Confirm Deletion</string>
    <string name="dialog_all_fields_required">All fields are required</string>
</resources>
